[package]
name = "imgutils"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = [
  "derive",
  "cargo",
  "std",
  "color",
], default-features = false }
image = "0.24.1"
rand = "0.8.5"
recur-fn = "2.2"