[package]
name = "imgutils"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = [
  "derive",
  "cargo",
  "std",
  "color",
], default-features = false }
image = "0.24.1"
rand = "0.8.5"
num_cpus = "1.0"